syntax = "proto3";
package twilightproject.nyks.volt;


option go_package = "github.com/twilight-project/nyks/x/volt/types";


// Chain creates an internal mapping with identifier and bool confirmed
message BtcWithdrawRequestInternal {
    uint32 withdrawIdentifier = 1;
    string withdrawAddress  = 2;
    uint64 withdrawReserveId  = 3;
    uint64 withdrawAmount  = 4; //in satoshis
    string twilightAddress  = 5;
    bool isConfirmed = 6;
    int64 CreationTwilightBlockHeight = 7;
}

message ReserveWithdrawPool {
    uint64 ReserveID = 1;
    uint64 RoundID = 2;
    repeated uint32 processingWithdrawIdentifiers = 3; // Currently being processed
    repeated uint32 queuedWithdrawIdentifiers = 4;     // Waiting to be processed
    uint32 currentProcessingIndex = 5;                 // Index of the last processed withdraw
    // You can use this to know where to start processing in the next sweep.
}
